se modifico index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>titulo nuevo modificado</h1>
 
     <form action="#" method="get">
+        <input type="text" name="firstName" id="firtName">
         <input type="button" value="Enviar">
+        
 </body>
 </html>
