--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <form action="#" method="get">
         <input type="text" name="firstName" id="firtName">
+        <input type="text" name="lasttName" id="lastName">
         <input type="button" value="Enviar">
         
 </body>
