--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <form action="#" method="get">
         <input type="text" name="firstName" id="firtName">
         <input type="text" name="lasttName" id="lastName">
+        <input type="number" name="age" id="age">
         <input type="button" value="Enviar">
         
 </body>
