--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>titulo nuevo modificado</h1>
 
     <form action="#" method="get">
-        <input type="text" name="firstName" id="firtName">
-        <input type="texto" name="lasttName" id="lastName">
+        <input type="texto" name="firstName" id="firtName">
+        <input type="text" name="lasttName" id="lastName">
         <input type="number" name="age" id="age">
         <input type="button" value="Enviar">
         
