--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input type="number" name="firstName" id="firtName">
         <input type="text" name="lasttName" id="lastName">
         <input type="number" name="age" id="age">
+        <input type="date" name="birthdate" id="birthdate">
         <input type="button" value="Enviar">
         
 </body>
